PCP定理に関する文書を更新し、定義や背景の説明を明確化。特に判定問題やオラクルアルゴリズムの定義を改善し、PCP定理の背景に関する情報を追加。文書全体の整合性を向上させるための修正を実施し、PDFおよび関連ファイルを更新。

--- a/introduction.tex
+++ b/introduction.tex
@@ -29,7 +29,7 @@ PCP定理は1998年に\citet{AroraS98,AroraLMSS98}によって証明された.
 
 \begin{definition}{判定問題}{decision-problem}
   部分集合$L\subseteq\binset^*$を\emph{判定問題(または言語)}といい,
-  アルゴリズムに与える$L$の入力を\emph{インスタンス}という.
+  アルゴリズムに与える入力を問題$L$の\emph{インスタンス}という.
   また, インスタンス$x\in\binset^*$は$x\in L$であるとき, 判定問題$L$の\emph{Yesインスタンス}といい,
   そうでない場合は\emph{Noインスタンス}という.
 
@@ -84,7 +84,7 @@ PCP定理は1998年に\citet{AroraS98,AroraLMSS98}によって証明された.
 また, 入力とは別に文字列へのオラクルアクセスを受け取るアルゴリズムを考える.
 \begin{definition}{オラクルアルゴリズム}{oracle-algorithm}
   文字列$\pi\in\binset^*$に対し, $\pi$への\emph{オラクルアクセス}を持つアルゴリズム$A^\pi(x)$とは, 計算途中で$\pi$の指定された位置の文字を読むことができるアルゴリズムである.
-  すなわち, $\pi$の$i$番目の文字を読む操作を$A^\pi(x)$の計算過程中に$O(\log \abs{\pi})$時間で行うことができるアルゴリズムである.\footnote{自然数$i\in[\abs{\pi}]$を指定するために$O(\log \abs{\pi})$ビットを定めなければならないため, $O(\log \abs{\pi})$時間を仮定している.}
+  すなわち, $\pi$の$i$番目の文字を読む操作を$A^\pi(x)$の計算過程中に$O(\log \abs{\pi})$時間で行うことができるアルゴリズムである.\footnote{自然数$i\in[\abs{\pi}]$を指定するために$O(\log \abs{\pi})$ビットを定めなければならないため, 一回の質問を行うたびに最悪の場合$O(\log \abs{\pi})$時間かかる.}
   同様に乱択オラクルアルゴリズムについても定義できる.
 \end{definition}
 
@@ -356,10 +356,15 @@ PCP定理を証明するには, 任意の$L\in\NP$に対して所望のPCP検証
 \end{exercise}
 
 \section{PCP定理の背景}
-PCP定理は組合せ最適化の分野への著しい応用を持つため,
-その視点からPCP定理を紹介する文献ではなぜPCP定理が発見されたのかという動機が語られることが少ないように思われる.
-そこで, この節ではPCPという計算量クラスを考えるに至った背景について軽く触れたい.
-PCP定理は1992年にAroraとSafraによって証明された.
+PCP定理は近似アルゴリズム設計の困難性という, 組合せ最適化の分野への著しい応用を持つ. しかしながら元々は計算量理論における「証明の検証」の概念の捉え方の変容が背景にある.
+この節の内容のほとんどは\cite{history-of-PCP}によるものであるため,
+詳細はそちらを参照されたい.
+
+\paragraph*{クラスNP.}
+\cref{def:classNP}は, よく知られるように正しいとされる主張に対してはそれを確定するに足る証拠が存在し, さらにその検証もまた効率的(多項式時間)に行えるという性質を捉えたものである.
+
+
+
 
 
 
