--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
 \input{theorems.tex}
 \input{commands.tex}
 
-\title{PCP定理の証明と応用}
+\title{PCP定理の証明}
 \author{清水 伸高 (東京科学大学)}
 \date{}
 \begin{document}
