--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,11 @@
+@ONLINE{history-of-PCP,
+  title     = {A history of the {PCP} Theorem},
+  author    = {O'Donnell, Ryan},
+  booktitle = {A history of the PCP Theorem},
+  url       = {https://courses.cs.washington.edu/courses/cse533/05au/pcp-history.pdf},
+  urldate   = {2025-05-28}
+}
+
 @ARTICLE{Levin1973,
   title        = {Universal Sequential Search Problems},
   author       = {Levin, Leonid Anatolievich},
