--- a/proof_of_PCP.tex
+++ b/proof_of_PCP.tex
@@ -355,7 +355,7 @@ Paley-Zygmundの不等式(\cref{lem:paley-zigmund-inequality})より, $\E[B]$お
 \begin{proof}
   $b = \ceil{\log_2\abs{\Sigma}}$とし, アルファベット$\Sigma$を$\binset^b$と同一視する
   ($\abs{\Sigma}$が2ベキでない場合はダミーの値を追加して$\abs{\Sigma}=\binset^b$とし, 各制約はダミーの値を読み込んだ場合は常に拒否するようにすればよい).
-  制約グラフ$G$の各辺$e\in E$に対応する制約$c_e\subseteq \Sigma^2$を指示関数$c_e\colon\Sigma^2\to\binset$と同一視し, これを二入力の論理回路として表現したものを$C_e\colon \binset^b\times \binset^b\to \binset$とする.
+  制約グラフ$G$の各辺$e\in E$に対応する制約$c_e\subseteq \Sigma^2$を指示関数$c_e\colon\Sigma^2\to\binset$と同一視し, これを二入力の論理回路として表現したものを$C_e\colon \binset^b\times \binset^b\to \binset$とする (任意の論理関数$f\colon\binset^\ell\to\binset$はサイズ$O(\ell2^\ell)$の論理回路で表現できるため, この回路はサイズが高々$2^{O(b)}$であるが, $b=\log_2\abs{\Sigma}$は定数として扱うのでこの回路のサイズも定数である).
 
   \begin{figure}[ht]
     \centering
