PCP定理の背景に関する章を拡充し、対話型証明やゼロ知識証明の概念を詳細に説明。関連する文献を追加し、文書全体の整合性を向上させるための修正を実施。PDFおよび関連ファイルを更新。

--- a/introduction.tex
+++ b/introduction.tex
@@ -355,16 +355,48 @@ PCP定理を証明するには, 任意の$L\in\NP$に対して所望のPCP検証
   \cref{thm:QuadEQ-PCP-verifier,thm:ThreeQuadEQ-NP-complete}を仮定して, PCP定理(\cref{thm:PCPtheorem})を証明せよ.
 \end{exercise}
 
-\section{PCP定理の背景}
+\section{PCP定理の背景: ランダムネスを用いる証明の検証}
 PCP定理は近似アルゴリズム設計の困難性という, 組合せ最適化の分野への著しい応用を持つ. しかしながら元々は計算量理論における「証明の検証」の概念の捉え方の変容が背景にある.
 この節の内容のほとんどは\cite{history-of-PCP}によるものであるため,
 詳細はそちらを参照されたい.
 
-\paragraph*{クラスNP.}
 \cref{def:classNP}は, よく知られるように正しいとされる主張に対してはそれを確定するに足る証拠が存在し, さらにその検証もまた効率的(多項式時間)に行えるという性質を捉えたものである.
+例えば「グラフ$G$は3彩色可能である」という主張は実際に3彩色を証明として提示できる.
+一方で「グラフ$G$は3彩色可能でない」という主張はそのような証明を提示することができるだろうか?
+計算量理論の重要予想$\mathsf{NP}\ne\mathsf{coNP}$によれば, このような証明を提示することができないとされているがその証明は与えられていない.
 
+そのような中, \emph{対話型証明}, \emph{ゼロ知識証明}, \emph{Arthur-Merlin証明}といった新しい証明の概念が独立同時期に複数の研究グループによって提案された \citet{GMR85,Babai1985}.
+対話型証明は証明者が証明を提示して検証者がそれを読み取るという1ラウンドのプロセスを多項式個のラウンドに拡張し, さらに乱択を用いて確率的な証明の検証を行うというものである.
+直感的には学術雑誌の査読と同様の形態で, 論文の著者(証明者)と査読者(検証者)の間で質問とその返答を繰り返して最終的に論文の正しさを確認するというものであるが, 検証者はコイントスを行うことが許されており, 実際に証明が正しい場合は高確率で受理され, 間違っている場合は高確率で拒否される.
+多項式時間アルゴリズムの検証者が無限の計算能力を持つ証明者の多項式ラウンドの会話によって確率的に検証できる判定問題のクラスを$\mathsf{IP}$という.
+ここで証明者とは関数$P\colon \binset^*\to\binset^*$であり, 検証者は質問$q\in\binset^{\poly(n)}$を証明者に送り, 証明者は$P(q)$を返す.
+ただし関数$q\mapsto P(q)$の計算時間は多項式時間でなくてもよい.
 
+なお, コイントスを行わない決定的な検証を考える場合はNP検証と同等であることが知られているため, 対話型証明とNP証明のギャップは本質的にはランダムネスに依拠することになる. 従って対話型証明は当初, 証明能力をそれほど大きくしないと考えられており, 前述の論文は\cite{history-of-PCP}によれば, 理論計算機科学ではなかなか受け入れられなかったようである.
 
+この状況の変化の兆しが見えたのは\citet{GMW86}による\emph{グラフ非同型性判定問題(GNI)}に対するゼロ知識証明の構築である.
+この問題は, 二つのグラフの組$(G_1,G_2)$が\emph{非同型}ならばYesインスタンスであり, 同型ならばNoインスタンスであるとする問題である\footnote{二つのグラフ$G_1=(V_1,E_1),G_2=(V_2,E_2)$が同型であるとは, 全単射$\phi\colon V_1\to V_2$が存在して, 任意の$u,v\in V_1$に対し, $u,v\in E_1$と$u,v\in E_2$が同値であることをいう.}.
+「二つのグラフは同型である」という主張は実際に同型写像を持ってくれば検証できるが, 「二つのグラフは非同型である」という不可能性の証明はどのようにすれば良いのだろうか?
+以下に証明の直感的な説明を与える:
+盲目の人に色の概念の証明をすることを考える.
+具体的には二つのくつ下1, くつ下2があり, これらの色が異なることを$V$さんという盲目の人に納得してもらうためにはどのようにすれば良いか?
+まず, 両方のくつ下の色を$V$さんに渡す.
+$V$さんは証明者に見えないところでコイントスを行い, どちらか一方のくつ下をランダムに選び, そのくつ下を証明者に見せてそのくつ下の番号を質問する.
+証明者はそのくつ下の番号を答え, $V$さんは事前に聞いた説明と合致するかどうかを検証する.
+\begin{itemize}
+  \item もしも両方のくつ下が同じ色だとすれば, 証明者は区別できないので当てずっぽうをするしかない. この場合の正解確率は$1/2$である.
+  \item もしも両方のくつ下が異なる色だとすれば, 証明者は色によってくつ下の番号を当てることができる. この場合の正解確率は$1$である.
+\end{itemize}
+この検証を複数回繰り返せば, 同じ色であった場合の正解確率を限りなく$0$まで近づけることができる.\footnote{このアイデアはくつ下が識別できるという主張のみを証明しており, それぞれのくつ下の色の情報を証明者に伝える必要がない. このような証明を\emph{ゼロ知識証明}という.} 
 
+このことは対話によって証明の検証能力が非自明に向上することを示唆するが, 実はさらなる向上が可能であり, 実は$\mathsf{PSPACE}$と呼ばれる問題クラス(多項式ビットの記憶領域を用いて解ける判定問題のクラス)は全て対話証明可能であることが\citet{Shamir90,LFKN90}によって示され, 対話型証明が可能な判定問題の特徴づけが与えられた (理論計算機科学では通常, 論文の著者はアルファベット順に名前を並べるが, Lundらの論文に関してはその慣例を破っている点が特徴的である).
 
+\begin{theorem}{}{IPPSPACE}
+  $\mathsf{IP}=\mathsf{PSPACE}$.
+\end{theorem}
+
+上記の定理は対話型証明の特徴づけを与えており, 特に検証にランダムネスを付与するとその検証能力が飛躍的に高まることを示唆している.
+そこで, この定理を「スケールダウン」することによって, クラス$\NP$を特徴づけられないだろうか?
+具体的には, ランダムネスを持つものの能力が制限された検証者によって$\NP$を特徴づけることは可能であろうか? (能力が制限されていない時はクラス$\mathsf{IP}$と一致する).
+クラス$\PCP$はこのような背景の下で考えられており, 具体的には検証者がアクセスできる証明の文字数を制限することによって$\NP$が特徴づけられる, という結果がPCP定理である.
 
