--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,88 @@
+@INPROCEEDINGS{Shamir90,
+  title      = {{IP=PSPACE} (interactive proof=polynomial space)},
+  author     = {Shamir, A},
+  booktitle  = {Proceedings [1990] 31st Annual Symposium on Foundations of
+                Computer Science},
+  publisher  = {IEEE Comput. Soc. Press},
+  eventtitle = {[1990] 31st Annual Symposium on Foundations of Computer Science},
+  venue      = {St. Louis, MO, USA},
+  pages      = {11--15 vol.1},
+  date       = {2002},
+  doi        = {10.1109/fscs.1990.89519},
+  isbn       = {9780818620829},
+  url        = {http://dx.doi.org/10.1109/FSCS.1990.89519}
+}
+
+
+@INPROCEEDINGS{LFKN90,
+  title      = {Algebraic methods for interactive proof systems},
+  author     = {Lund, C and Fortnow, L and Karloff, H and Nisan, N},
+  booktitle  = {Proceedings [1990] 31st Annual Symposium on Foundations of
+                Computer Science},
+  publisher  = {IEEE Comput. Soc. Press},
+  eventtitle = {[1990] 31st Annual Symposium on Foundations of Computer Science},
+  venue      = {St. Louis, MO, USA},
+  pages      = {2--10 vol.1},
+  date       = {2002},
+  doi        = {10.1109/fscs.1990.89518},
+  isbn       = {9780818620829},
+  url        = {http://dx.doi.org/10.1109/FSCS.1990.89518}
+}
+
+
+@INPROCEEDINGS{GMW86,
+  title      = {Proofs that yield nothing but their validity and a methodology
+                of cryptographic protocol design},
+  author     = {Goldreich, Oded and Micali, Silvio and Wigderson, Avi},
+  booktitle  = {27th Annual Symposium on Foundations of Computer Science (sfcs
+                1986)},
+  publisher  = {IEEE},
+  eventtitle = {27th Annual Symposium on Foundations of Computer Science (sfcs
+                1986)},
+  venue      = {Toronto, ON, Canada},
+  pages      = {174--187},
+  date       = {1986-10},
+  doi        = {10.1109/sfcs.1986.47},
+  issn       = {0272-5428},
+  isbn       = {9780818607400},
+  url        = {http://dx.doi.org/10.1109/SFCS.1986.47},
+  urldate    = {2025-05-28},
+  language   = {en}
+}
+
+
+@INPROCEEDINGS{GMR85,
+  title      = {The knowledge complexity of interactive proof-systems},
+  author     = {Goldwasser, S and Micali, S and Rackoff, C},
+  booktitle  = {Proceedings of the seventeenth annual ACM symposium on Theory of
+                computing - STOC '85},
+  publisher  = {ACM Press},
+  location   = {New York, New York, USA},
+  eventtitle = {the seventeenth annual ACM symposium},
+  venue      = {Providence, Rhode Island, United States},
+  pages      = {291--304},
+  date       = {1985},
+  doi        = {10.1145/22145.22178},
+  url        = {http://dx.doi.org/10.1145/22145.22178}
+}
+
+
+@INPROCEEDINGS{Babai1985,
+  title      = {Trading group theory for randomness},
+  author     = {Babai, L},
+  booktitle  = {Proceedings of the seventeenth annual ACM symposium on Theory of
+                computing - STOC '85},
+  publisher  = {ACM Press},
+  location   = {New York, New York, USA},
+  eventtitle = {the seventeenth annual ACM symposium},
+  venue      = {Providence, Rhode Island, United States},
+  pages      = {421--429},
+  date       = {1985},
+  doi        = {10.1145/22145.22192},
+  url        = {http://dx.doi.org/10.1145/22145.22192}
+}
+
+
 @ONLINE{history-of-PCP,
   title     = {A history of the {PCP} Theorem},
   author    = {O'Donnell, Ryan},
