PCP定理に関する文書を更新し、初期の証明者やその貢献に関する情報を追加。局所検査可能符号の定義を明確化し、関連する文献を新たに追加。PDFおよび関連ファイルを更新。

--- a/introduction.tex
+++ b/introduction.tex
@@ -4,7 +4,11 @@
 PCP定理は1998年に\citet{AroraS98,AroraLMSS98}によって証明された.
 この証明は代数的な手法に基づく誤り訂正符号を技巧的に組合せたものであり, 難解なものであったが, その後\citet{Din07}によってより簡潔な証明が与えられた.
 この講義では\citet{Din07}による比較的簡単な証明を紹介する.
-ちなみにDinurはのちにこの業績によりゲーデル賞を受賞している.
+
+ちなみにPCP定理の最初の証明やその応用に多大な貢献を果たした
+Arora, Feige, Goldwasser, Lund, Lovász, Motwani, Safra, Sudan, Szegedy
+は2001年にゲーデル賞を受賞し,
+証明を大幅に単純化したDinurは2019年にゲーデル賞を受賞している.
 
 \section{計算量理論の復習}
 まずは計算量理論のどの教科書にも載っているような基礎的な用語の定義を与える. これらの用語に明るい読者は\cref{sec:PCP}から読み始めても良い.
@@ -423,3 +427,26 @@ $V$さんは証明者に見えないところでコイントスを行い, どち
 具体的には, ランダムネスを持つものの能力が制限された検証者によって$\NP$を特徴づけることは可能であろうか? (能力が制限されていない時はクラス$\mathsf{IP}$と一致する).
 クラス$\PCP$はこのような背景の下で考えられており, 具体的には検証者がアクセスできる証明の文字数を制限することによって$\NP$が特徴づけられる, という結果がPCP定理である.
 
+\begin{comment}
+
+\section{PCP定理の応用}
+PCP定理は計算量理論の結果であるが, 理論計算機科学の様々な分野に応用されている.
+
+\subsection{組合せ最適化問題に対する近似のNP困難性}
+
+\emph{最適化}とは, 何らかの関数
+\begin{align*}
+  f\colon \Omega \to \mathbb{R}
+\end{align*}
+を考え, $x\in\Omega$を動かした中で$f(x)$の(存在するならば)最大値または最小値を求める問題である.
+特に関数の定義域$\Omega$が$\Real^n$など連続的な場合は\emph{連続最適化}, $\binset^n$や$\mathbb{Z}^n$など離散的な場合は\emph{離散最適化}または\emph{組合せ最適化}と呼ばれる.
+
+
+
+
+\subsection{局所検査可能符号}
+
+\subsection{量子版のPCP}
+
+
+\end{comment}
