--- a/ref.bib
+++ b/ref.bib
@@ -1,10 +1,85 @@
+@INPROCEEDINGS{Lin2022,
+  title     = {{c3}-Locally Testable Codes from Lossless Expanders},
+  author    = {Lin, Ting-Chun and Hsieh, Min-Hsiu},
+  booktitle = {International Symposium on Information Theory (ISIT)},
+  pages     = {1175--1180},
+  date      = {2022-06},
+  doi       = {10.1109/ISIT50566.2022.9834679},
+  issn      = {2157-8117},
+  url       = {http://dx.doi.org/10.1109/ISIT50566.2022.9834679}
+}
+
+@INPROCEEDINGS{PK22,
+  title     = {Asymptotically good Quantum and locally testable classical {LDPC}
+               codes},
+  author    = {Panteleev, Pavel and Kalachev, Gleb},
+  booktitle = {Symposium on Theory of Computing (STOC)},
+  publisher = {Association for Computing Machinery},
+  location  = {New York, NY, USA},
+  venue     = {Rome, Italy},
+  pages     = {375--388},
+  date      = {2022-06-10},
+  doi       = {10.1145/3519935.3520017},
+  isbn      = {9781450392648},
+  series    = {STOC 2022},
+  url       = {https://doi.org/10.1145/3519935.3520017},
+  urldate   = {2023-06-28}
+}
+
+@INPROCEEDINGS{DELLM22,
+  title     = {Locally testable codes with constant rate, distance, and locality},
+  author    = {Dinur, Irit and Evra, Shai and Livne, Ron and Lubotzky, Alexander
+               and Mozes, Shahar},
+  booktitle = {Symposium on Theory of Computing (STOC)},
+  publisher = {Association for Computing Machinery},
+  location  = {New York, NY, USA},
+  pages     = {357--374},
+  date      = {2022-06-09},
+  doi       = {10.1145/3519935.3520024},
+  series    = {STOC 2022},
+  url       = {https://doi.org/10.1145/3519935.3520024},
+  urldate   = {2022-08-29}
+}
+
+
+@ARTICLE{GS06,
+  title        = {Locally testable codes and {PCPs} of almost-linear length},
+  author       = {Goldreich, Oded and Sudan, Madhu},
+  journaltitle = {Journal of the ACM},
+  publisher    = {Association for Computing Machinery},
+  location     = {New York, NY, USA},
+  volume       = {53},
+  issue        = {4},
+  pages        = {558--655},
+  date         = {2006-07-01},
+  doi          = {10.1145/1162349.1162351},
+  issn         = {0004-5411},
+  url          = {https://doi.org/10.1145/1162349.1162351},
+}
+
+
+@INBOOK{Gol10,
+  title     = {Short Locally Testable Codes and Proofs: A Survey in Two Parts},
+  author    = {Goldreich, Oded},
+  editor    = {Goldreich, Oded},
+  booktitle = {Property Testing: Current Research and Surveys},
+  publisher = {Springer Berlin Heidelberg},
+  location  = {Berlin, Heidelberg},
+  pages     = {65--104},
+  date      = {2010},
+  doi       = {10.1007/978-3-642-16367-8_6},
+  isbn      = {9783642163678},
+  url       = {https://doi.org/10.1007/978-3-642-16367-8_6}
+}
+
+
 @INPROCEEDINGS{Shamir90,
   title      = {{IP=PSPACE} (interactive proof=polynomial space)},
   author     = {Shamir, A},
   booktitle  = {Proceedings [1990] 31st Annual Symposium on Foundations of
                 Computer Science},
   publisher  = {IEEE Comput. Soc. Press},
-  eventtitle = {[1990] 31st Annual Symposium on Foundations of Computer Science},
+  eventtitle = {31st Annual Symposium on Foundations of Computer Science},
   venue      = {St. Louis, MO, USA},
   pages      = {11--15 vol.1},
   date       = {2002},
