--- a/introduction.tex
+++ b/introduction.tex
@@ -187,7 +187,7 @@ Arora, Feige, Goldwasser, Lund, Lovász, Motwani, Safra, Sudan, Szegedy
   \begin{enumerate}
   \item もし$x\in L$ならば, ある$\pi\in\binset^*$が存在して, ($V$の乱択に関して)確率$1$で$V^\pi(x)=1$となる (\emph{完全性}).
   \item もし$x\notin L$ならば, 全ての$\pi\in\binset^*$に対して, ($V$の乱択に関して)確率$1/3$以上で$V^\pi(x)=0$となる (\emph{健全性}).
-  \item さらに, 入力長が$n=\abs{x}$のとき, $V^\pi(x)$はオラクル$\pi$のうち高々$q(n)$個の文字を読み, そのランダムシード長は$r(n)$で抑えられる.
+  \item さらに, 入力長が$n=\abs{x}$のとき, $V^\pi(x)$はオラクル$\pi$のうち高々$O(q(n))$個の文字を読み, そのランダムシード長は$O(r(n))$で抑えられる.
   \end{enumerate}
   このようなオラクル乱択アルゴリズム$V$を\emph{PCP検証者}といい, 証明$\pi$を\emph{PCP}という.
 \end{definition}
@@ -219,18 +219,19 @@ PCP検証者の構成は非常に難しい.
 しかし, この検証者は健全性の条件を満たさない.
 実際, $G$が$k$-彩色可能でない場合, どのような関数$\pi\colon V \to [k]$を与えても, 少なくとも一つの辺$\{u,v\}\in E$が存在して$\pi(u)=\pi(v)$となるが, 検証者がこのような辺を引き当てる確率は最悪の場合, $1/\abs{E}$となるからである.
 
-PCP定理とは, ある$r(n)=O(\log n)$, $q(n)=O(1)$に対して$\PCP(r,q)=\NP$が成り立つことを主張する定理である.
-例えばグラフ彩色問題は$\NP$に属するため, 実は全段落の$r(n),q(n)$を達成するPCP検証者が存在するのである!
-
+PCP定理とは, $O(\log n)$ビットのランダムネスと$O(1)$回のオラクルアクセスによって, 任意の$\NP$に属する判定問題のPCP検証が可能であることを保証する定理である.
 \begin{theorem}{PCP定理}{PCPtheorem}
-  ある$r(n)=O(\log n)$, $q(n)=O(1)$に対して$\PCP(r,q)=\NP$が成り立つ.
+  $\PCP(\log n,1)=\NP$.
 \end{theorem}
 
+例えばグラフ彩色問題は$\NP$に属する. PCP定理によると, 証明のうち$O(1)$個の文字を読むだけで確率的に検証できることがわかる.
+
+
 \begin{remark}{片側の包含関係}{one-sided-inclusion}
-  PCP定理において, $\PCP(r,q)\subseteq \NP$は容易に示すことができる.
-  実際, \cref{rem:PCP-length}により, 証明$\pi$の長さは$q(n)2^{r(n)} = n^{O(1)}$で抑えられる.
-  また, $r(n)=O(\log n)$より, 検証者は$2^{r(n)}=n^{O(1)}$個のランダムシードを列挙し, それら全てに対してPCP検証者を適用し, その出力値の多数決をとることで, 入力$x$に対して$x\in L$かどうかを多項式時間で判定できる.
-  PCP定理の証明の本質的な難しさは逆側の包含関係$\NP\subseteq \PCP(r,q)$の証明にある.
+  PCP定理において, $\PCP(\log n,1)\subseteq \NP$は容易に示すことができる.
+  実際, \cref{rem:PCP-length}により, $O(r(n))$ビットのランダムネスと$O(q(n))$回のオラクルアクセスを行うPCP検証者の証明$\pi$の長さは$O(q(n))2^{O(r(n))} = n^{O(1)}$で抑えられる.
+  また, PCP検証者のランダムビットの長さが$O(\log n)$なので, 全てのありうる$2^{O(r(n))}=n^{O(1)}$個のランダムシードを列挙し, それら全てに対してPCP検証者を適用し, その出力値の多数決をとることで, 入力$x$に対して$x\in L$かどうかを多項式時間でNP検証できる.
+  PCP定理の証明の本質的な難しさは逆側の包含関係$\NP\subseteq \PCP(\log n,1)$の証明にある.
 \end{remark}
 
 \subsection{NP完全性とCook-Levinの定理}
@@ -375,7 +376,7 @@ PCP定理を証明するには, 任意の$L\in\NP$に対して所望のPCP検証
 実際には一つのNP完全問題(例えば$\QuadEQ$や$\ThreeCOL$)を固定してそれに対するPCP検証者を構成すれば良いことがわかる.
 
 \begin{theorem}{二次方程式系に対するPCP検証者}{QuadEQ-PCP-verifier}
-  ある$r(n)=O(\log n),q(n)=O(1)$に対して, 二次方程式系の判定問題$\ThreeQuadEQ$は$\PCP(r,q)$に属する.
+  $\ThreeQuadEQ\in \PCP(\log n,1)$.
 \end{theorem}
 
 \begin{exercise}{}{exercise2}
